# scrapy_course

./: .projections.json  README.md  pyproject.toml
car_spider/car_spider/: items.py  middlewares.py  pipelines.py
car_spider/car_spider/spiders/: baierl.py
scrapy_course/baierl/: scrapy.cfg
scrapy_course/baierl/baierl/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_course/baierl/baierl/spiders/: lithia.py
scrapy_course/books_crawler/books_crawler/: settings.py
scrapy_course/books_crawler/books_crawler/spiders/: books.py
scrapy_course/books_selenium/books_selenium/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_course/books_selenium/books_selenium/spiders/: books.py
scrapy_course/craigslist/craigslist/: settings.py
scrapy_course/craigslist/craigslist/spiders/: jobs.py
scrapy_course/follow_book_links/: scrapy.cfg
scrapy_course/follow_book_links/follow_book_links/: extractors.json  items.py  middlewares.py  pipelines.py  settings.py
scrapy_course/follow_book_links/follow_book_links/spiders/: books.py
scrapy_course/quotes_js/quotes_js/: settings.py
scrapy_course/quotes_js/quotes_js/spiders/: quotes.py
scrapy_course/quotes_login/quotes_login/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_course/quotes_login/quotes_login/spiders/: login.py
scrapy_course/quotes_spider/quotes_spider/: items.csv  items.json
scrapy_course/quotes_spider/quotes_spider/spiders/: quotes.py
tests/: test_scrapy_course.py
